test_fm/_test48.ref
Error: method 'f' called with incompatible argument type (argument #1) in '_test48.nj' on line 18
